formatting the code, tests and docks updated